--- a/sales-invoicing-dotnet.csproj
+++ b/sales-invoicing-dotnet.csproj
@@ -7,4 +7,10 @@
     <RootNamespace>sales_invoicing_dotnet</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" version="2.2.0">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" version="2.2.0">
+    <PackageReference Include="Microsoft.AspNetCore.Tools" version="2.2.0">
+  </ItemGroup>
+
 </Project>
