--- a/sales-invoicing-dotnet.csproj
+++ b/sales-invoicing-dotnet.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" version="2.2.0">
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" version="2.2.0">
-    <PackageReference Include="Microsoft.AspNetCore.Tools" version="2.2.0">
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
